finished extra credit

--- a/SampleFiles/using_data.html
+++ b/SampleFiles/using_data.html
@@ -43,31 +43,46 @@
             <article id="tweet3" class="tweet">
                 <i class="fa fa-user"></i>
                 <a href="#"></a>
-                <span class="username"></span> &bull;
+                <span class="username"></span>
+                <span class="handle"></span> &bull;
                 <span class="date"></span>
+                <br> <br>
                 <div class="message"></div>
+                <br>
+                <span class="likes"></span>
+                <span class="retweets"></span>
             </article>
 
             <!-- Tweet #2 -->
             <article id="tweet2" class="tweet">
                 <i class="fa fa-user"></i>
                 <a href="#"></a>
-                <span class="username"></span> &bull;
+                <span class="username"></span>
+                <span class="handle"></span> &bull;
                 <span class="date"></span>
+                <br> <br>
                 <div class="message"></div>
+                <br>
+                <span class="likes"></span>
+                <span class="retweets"></span>
             </article>
 
             <!-- Tweet #1 -->
             <article id="tweet1" class="tweet">
                 <i class="fa fa-user"></i>
                 <a href="#"></a>
-                <span class="username"></span> &bull;
+                <span class="username"></span>
+                <span class="handle"></span> &bull;
                 <span class="date"></span>
+                <br> <br>
                 <div class="message"></div>
+                <br>
+                <span class="likes"></span>
+                <span class="retweets"></span>
             </article>
 
             <div id="all">
-
+    
             </div>
 
         </main>
